add get post func
