# exam_api/api/router.go
@@ -48,6 +48,7 @@ func New(option Option) *gin.Engine {
 	api.GET("/reating/get/:id",handlerV1.GetReating)
 	api.GET("/post/get/reatings/:id",handlerV1.GetPostReating)
 	api.GET("/custumer/getList",handlerV1.GetListCustumers)
+	api.GET("/post/get/:id",handlerV1.GetPost)
 	url := ginSwagger.URL("swagger/doc.json")
 	api.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFile.Handler, url))
 	return router
